--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  dio: ^5.0.0
+  go_router: ^7.0.0
+  flutter_bloc: ^9.1.1
+  shared_preferences: ^2.5.3
+  firebase_messaging: ^15.1.5
+  flutter_local_notifications: ^19.3.1
   image_picker: ^1.2.0
 
 dev_dependencies:
@@ -59,8 +65,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
+    - assets/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
